fix scrollbar styles

--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -339,16 +339,20 @@ ul.social-icons {
     padding-left: 0;
     padding-right: 0;
   }
-  // Style scrollbar for Chrome, Safari and Opera
-  &::-webkit-scrollbar {
-    display: $scrollbar-width;
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: #888;
-  }
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
-  }
+}
+
+// Style scrollbar for Chrome, Safari and Opera
+.site-main::-webkit-scrollbar {
+  display: $scrollbar-width;
+}
+.site-main::-webkit-scrollbar-track {
+  background-color: #0000;
+}
+.site-main::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+.site-main::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
 
 /**
